test/fixtures/typecheck/fail/UnknownInstanceMethod.lam
module UnknownInstanceMethod

class F a where
  f : a

type D = D

instance F D where
  g = D
